# robin

./: BATCTL_COMPARISON.md  Cargo.toml  Cross.toml  Dockerfile.aarch64  Dockerfile.armv7  LICENSE  PUBLISHING.md  README.md
.github/: LABELS.md  copilot-instructions.md  labels.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: aggregation.rs  ap_isolation.rs  app.rs  bridge_loop_avoidance.rs  gateways.rs  gw_mode.rs  interface.rs  main.rs  neighbors.rs  originators.rs  routing_algo.rs  transglobal.rs  translocal.rs  utils.rs
lib/: Cargo.toml  TODO
lib/src/: client.rs  error.rs  lib.rs
lib/src/commands/: aggregation.rs  ap_isolation.rs  bridge_loop_avoidance.rs  gateways.rs  gw_mode.rs  interface.rs  mod.rs  neighbors.rs  originators.rs  routing_algo.rs  transglobal.rs  translocal.rs  utils.rs
lib/src/model/: attribute.rs  client_flag.rs  command.rs  gateway.rs  interface.rs  mod.rs  neighbor.rs  originator.rs  translation.rs  transtable.rs  utils.rs
lib/src/netlink/: attribute.rs  attribute_builder.rs  cmd.rs  command.rs  family.rs  index.rs  message.rs  mod.rs  socket.rs  todo
lib/src/sysfs/: mod.rs  sysfs.rs
lib/src/types/: originator.rs
src/: error.rs  lib.rs
src/cli/: ap_isolation.rs  app.rs  gateways.rs  gw_mode.rs  interface.rs  mod.rs  neighbors.rs  originators.rs  routing_algo.rs  transglobal.rs  translocal.rs  utils.rs
src/commands/: bridge_loop_avoidance.rs  gateways.rs  interface.rs  transglobal.rs  translocal.rs
src/model/: attribute.rs  command.rs  interface.rs  mod.rs  originator.rs
src/netlink/: attribute_builder.rs  attrs.rs  family.rs  message.rs  messages.rs  mod.rs  socket.rs  todo
src/types/: originator.rs
