[package]
name = "robin-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "robctl"
path = "src/main.rs"

[dependencies]
robin-lib = { path = "../lib" }
clap = { version = "4.5.32", features = ["cargo", "derive", "env"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
comfy-table = "7"
macaddr = "1"