[package]
name = "batman-robin-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for managing BATMAN-adv mesh networks"
repository = "https://github.com/sntns/robin"
license = "MIT"
keywords = ["batman", "mesh", "networking", "cli"]
categories = ["command-line-utilities", "network-programming"]
readme = "../README.md"

[[bin]]
name = "robctl"
path = "src/main.rs"

[dependencies]
batman_robin = { version = "0.1.0", path = "../lib", package = "batman-robin-lib" }
clap = { version = "4.5.32", features = ["cargo", "derive", "env"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
comfy-table = "7"
macaddr = "1"